Swagger models for description of fields
