# swagger.yaml
@@ -14,22 +14,37 @@ definitions:
     description: Product represents a product
     properties:
       description:
+        description: description of the product
+        maxLength: 10000
         type: string
         x-go-name: Description
       id:
+        description: id of the product
         format: int64
+        maxLength: 255
         type: integer
         x-go-name: ID
       name:
+        description: name of the product
+        maxLength: 255
         type: string
         x-go-name: Name
       price:
+        description: price of the product
         format: float
+        minimum: 0.01
         type: number
         x-go-name: Price
       sku:
+        description: the SKU for the product
+        pattern: '[a-z]+-[a-z]+-[a-z]+'
         type: string
         x-go-name: SKU
+    required:
+    - id
+    - name
+    - price
+    - sku
     type: object
     x-go-package: github.com/agbanagba/go-microservice/data
   ValidationError:
@@ -48,6 +63,15 @@ info:
   version: 1.0.0
 paths:
   /products:
+    get:
+      description: Returns a list of products
+      operationId: listProducts
+      responses:
+        "200":
+          $ref: '#/responses/productsResponse'
+      tags:
+      - products
+  /products/{id}:
     delete:
       description: Deletes a product
       operationId: deleteProduct
@@ -59,14 +83,13 @@ paths:
         required: true
         type: integer
         x-go-name: ID
-      tags:
-      - products
-    get:
-      description: Returns a list of products
-      operationId: listProducts
       responses:
-        "200":
-          $ref: '#/responses/productsResponse'
+        "201":
+          $ref: '#/responses/noContentResponse'
+        "404":
+          $ref: '#/responses/errorResponse'
+        "501":
+          $ref: '#/responses/errorResponse'
       tags:
       - products
 produces:
